fix: add 'whitespase: nowrap' to save button on small screens

--- a/src/variables/buttons.scss
+++ b/src/variables/buttons.scss
@@ -105,6 +105,7 @@
     @media screen and (max-width: $width-mini) {
       & {
         font-size: 11px;
+        white-space: nowrap;
       }
     }
   }
